Update 'qbx6y4qhw-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:f405b1f123c15ce41078d49c70b925fc74b50966@sha256:4c94639ebd6b271a00bbacd61cdf12758e3f6c3f55afb6425faff7cde3213cf0

--- a/components/qbx6y4qhw-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/qbx6y4qhw-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qbx6y4qhw-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:f405b1f123c15ce41078d49c70b925fc74b50966@sha256:4c94639ebd6b271a00bbacd61cdf12758e3f6c3f55afb6425faff7cde3213cf0
+          name: container-image
